--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,26 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+// Attached: HW_10a, HW_10b, HW_10c, HW_10d
+// ===========================================
+// Program: HW_10a
+// ===========================================
+// Programmer: Christian Verry
+// Class: CS CMPR 121
+// ===========================================
+
+
+#include <iostream>
+#include <algorithm>
+using namespace std;
+
+int main()
+{
+	cout << "The greater value of 1 and 2 = " << max(1, 2);
+	cout << "\nThe greater value of 2 and 1 = " << max(2, 1);
+	cout << "\nThe greater value of 'a' and 'z' = " << max('a','z');
+	cout << "\nThe greater value of 3.14 and 2.72 = " << max(3.14, 2.72) << "\n\n";
+
+	system("pause");
+	
+	return 0;
+}
